force-app/main/default/objects/CamAPIDefaultValues__c/CamAPIDefaultValues__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Cam API Default Values</label>
</CustomObject>