force-app/main/default/objects/CamAPIDefaultValues__c/fields/collection_method__c.field-meta.xml
<CustomField>
    <fullName>collection_method__c</fullName>
    <label>collection_method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>