force-app/main/default/objects/CamAPIDefaultValues__c/fields/did_limit__c.field-meta.xml
<CustomField>
    <fullName>did_limit__c</fullName>
    <label>did_limit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>