force-app/main/default/objects/CamAPIDefaultValues__c/fields/marketplace_code__c.field-meta.xml
<CustomField>
    <fullName>marketplace_code__c</fullName>
    <label>marketplace code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>