force-app/main/default/objects/CamAPIDefaultValues__c/fields/oem__c.field-meta.xml
<CustomField>
    <fullName>oem__c</fullName>
    <label>oem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>