force-app/main/default/objects/CamAPIDefaultValues__c/fields/secure_fax_Consensus__c.field-meta.xml
<CustomField>
    <fullName>secure_fax_Consensus__c</fullName>
    <label>secure_fax_Consensus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>