force-app/main/default/objects/CamAPIDefaultValues__c/fields/secure_fax_Efax__c.field-meta.xml
<CustomField>
    <fullName>secure_fax_Efax__c</fullName>
    <label>secure_fax_Efax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>